tests/unit-fail-compilation/dup_params1.c.ref
dup_params1.c:1:1: error: Redeclaration of x with no linkage.
  Constraint violation (CV-TDL4).
   see C11 section 6.7:3 http://rvdoc.org/C11/6.7
   see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
Translation failed (config dumped). Run kcc -d dup_params1.c to see commands run.
